router structure changes

--- a/src/app/hero-header/hero-header.component.html
+++ b/src/app/hero-header/hero-header.component.html
@@ -13,6 +13,7 @@
             <ul class="nav navbar-nav">
                 <li><a [routerLink]="'/dashboard'" routerLinkActive="active">Dashboard</a></li>
                 <li><a [routerLink]="'/heroes'" routerLinkActive="active">Heroes</a></li>
+                <li><a [routerLink]="'/add-hero'" routerLinkActive="active">Add</a></li>
             </ul>
             <form class="navbar-form navbar-left">
                 <div class="form-group">
